syntax = "proto3";

option go_package = "tgBot/app/proto/pbTgBot";
import "google/protobuf/empty.proto";

package pbTgBot;

service tgBot {
  rpc SendMessage(SendMessageReq) returns (google.protobuf.Empty);
}

message SendMessageReq {
  string message = 1;
}
